# OpenShelf

./: .env.example  .gitignore  README.md  pyproject.toml
deployment/: .env.example
src/application/dtos/user/: main.py
src/domain/entities/: author.py  book.py  user.py
src/domain/exceptions/: author.py  base.py  book.py  loan.py  main.py  user.py
src/infrastructure/auth/: __init__.py  passwords.py
src/infrastructure/database/: database_manager.py  models.py
src/infrastructure/interfaces/: database.py
src/infrastructure/logging/: config.py  middleware.py
src/infrastructure/services/: jwt.py
src/infrastructure/settings/: __init__.py  main.py
src/interfaces/: main.py
src/interfaces/api/: dependencies.py  main.py
src/interfaces/api/v1/: main.py
src/interfaces/api/v1/auth/: __init__.py  main.py
